--- a/28/from.html
+++ b/28/from.html
@@ -19,12 +19,27 @@
         </nav>
     </div>
     <div id="maindiv2">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850291.321738675!2d129.0813135237721!3d33.64548779198006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3541eda1e9848429%3A0xf60a729936398783!2z56aP5bKh55yM56aP5bKh5biC!5e0!3m2!1sja!2sjp!4v1750610154034!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
-    </div>
-        <div class="sightseeing">
+        <div class="sightseeingtitle">
             <h1>FUKUOKA</h1>
-            <img src="image/福岡市1.jpg" alt="福岡市の画像">
-            <img src=""
+        </div>
+        <div class="sightseeing">
+            <div class="sightseeing-item">
+            <h1>名所</h1>
+            <h2>福岡タワー</h2>
+            <h2>みずほPayPayドーム</h2>
+            <h2>みずほPayPayドーム</h2>
+            </div>
+            <div class="sightseeing-item">
+            <h1>グルメ</h1>
+            <h2>とんこつラーメン</h2>
+            <h2>明太子</h2>
+            <h2>みずほPayPayドーム</h2>
+            </div>
+            <div class="sightseeing-item">
+            <h1>文化</h1>
+            <h2>山笠</h2>
+            <h2>どんたく</h2>
+            </div>
         </div>
     </div>
 </body>
