--- a/28/hobby.html
+++ b/28/hobby.html
@@ -17,5 +17,29 @@
         </ul>
         </nav>
     </div>
+    <div id="maindiv3">
+        <header>
+        <div class="header-icons">
+            <h1>SNS</h1>
+            <img src="icon/search.png" alt="Search">
+            <img src="icon/profile.png" alt="Profile">
+        </div>
+        </header>
+        <div id="maindiv3">
+        <div class="gamen1">
+                <img src="image/Image.jpg" alt="インスタ風画面">
+                </div>
+        <div class="footer-icons2">
+                <img src="image/home.png" alt="Home">
+                <img src="image/profile.png" alt="profile">
+                <img src="image/favorite.png" alt="favorite">
+        </div>
+        <div class="footer-icons">
+            <img src="image/home.png" alt="Home">
+            <img src="image/profile.png" alt="profile">
+            <img src="image/favorite.png" alt="favorite">
+            <img src="image/notification.png" alt="Notification">
+        </div>
+    </div> 
 </body>
 </html>
