--- a/28/from.html
+++ b/28/from.html
@@ -20,27 +20,39 @@
     </div>
     <div id="maindiv2">
         <div class="sightseeingtitle">
-            <h1>FUKUOKA</h1>
+            <h1>福岡市について</h1>
+            <p>私の出身地の福岡市について紹介します！</p>
         </div>
         <div class="sightseeing">
-            <div class="sightseeing-item">
             <h1>名所</h1>
-            <h2>福岡タワー</h2>
-            <h2>みずほPayPayドーム</h2>
-            <h2>みずほPayPayドーム</h2>
+            <div class="sightseeing-item">
+                <h2>○福岡タワー</h2>
+                <p>福岡市のランドマークであり、高さ234メートルからは博多湾や福岡の街並みを一望できます。夜には幻想的なライトアップも楽しめます。</p>
             </div>
             <div class="sightseeing-item">
-            <h1>グルメ</h1>
-            <h2>とんこつラーメン</h2>
-            <h2>明太子</h2>
-            <h2>みずほPayPayドーム</h2>
-            </div>
-            <div class="sightseeing-item">
-            <h1>文化</h1>
-            <h2>山笠</h2>
-            <h2>どんたく</h2>
+            <h2>○大濠公園</h2>
+            <p>大きな池を中心に、ジョギングコースやボート、四季折々の自然が楽しめる憩いの場です。</p>
             </div>
         </div>
+            <div class="sightseeing-item-title">
+            <h1>グルメ</h1>
+            </div>
+            <div class="sightseeing-item">
+                <h2>とんこつラーメン</h2>
+                <img src="image/福岡2.png" alt="福岡2の画像">
+                <h2>明太子</h2>
+            </div>
+            <div class="sightseeing-item-title">
+                <h1>文化</h1>
+            </div>
+            <div class="sightseeing-item">
+                <h2>○山笠</h2>
+                <p>豪快にかつがれる山笠が、博多の街を駆け抜ける迫力満点のお祭り！伝統と情熱がぎゅっと詰まった、7月の福岡を代表するイベントです。</p>
+            </div>
+            <div class="sightseeing-item">
+                <h2>○どんたく</h2>
+                <p>ゴールデンウィークに開催され、パレードもステージで、老若男女が一緒に盛り上がる、福岡の春の風物詩です。</p>
+            </div>
     </div>
 </body>
 </html>
