--- a/28/home.html
+++ b/28/home.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="title-nav">
+        <nav>
         <ul>
             <li><a href="home.html">ホーム</a></li>
             <li><a href="anime.html">アニメ</a></li>
@@ -16,6 +17,7 @@
             <li><a href="from.html">出身地</a></li>
             <li><a href="hobby.html">趣味</a></li>
         </ul>
+        </nav>
     </div>
     <div class="profiletitle">
         <h1>profile</h1>
@@ -56,6 +58,8 @@
         <div class="profile-coment">
             <p>よろしくお願いします。</p>
         </div>
-    <small>@copy 251418 畑中愛実 2025</small>
+        <div class="footer">
+            <small>&copy; 2501418 畑中愛実 2025</small>
+        </footer>
 </body>
 </html>
