--- a/28/from.html
+++ b/28/from.html
@@ -19,12 +19,9 @@
         </nav>
     </div>
     <div id="maindiv2">
-        <div class="sightseeingtitle">
-            <h1>福岡市について</h1>
             <p>私の出身地の福岡市について紹介します！</p>
-        </div>
         <div class="sightseeing">
-            <h1>名所</h1>
+            <h1>観光名所</h1>
             <div class="sightseeing-item">
                 <h2>○福岡タワー</h2>
                 <p>福岡市のランドマークであり、高さ234メートルからは博多湾や福岡の街並みを一望できます。夜には幻想的なライトアップも楽しめます。</p>
@@ -33,17 +30,17 @@
             <h2>○大濠公園</h2>
             <p>大きな池を中心に、ジョギングコースやボート、四季折々の自然が楽しめる憩いの場です。</p>
             </div>
-        </div>
-            <div class="sightseeing-item-title">
-            <h1>グルメ</h1>
+            <div class="sightseeing-item">
+                <h2>○糸島</h2>
+                <p>福岡市の西に位置する自然豊かな地域で、美しい海岸線や山々が魅力です。カフェや工房も多く、観光やドライブに人気のスポットです。</p>
             </div>
             <div class="sightseeing-item">
-                <h2>とんこつラーメン</h2>
-                <img src="image/福岡2.png" alt="福岡2の画像">
-                <h2>明太子</h2>
+                <h2>○太宰府天満宮</h2>
+                <p>学問の神様・菅原道真公を祀る由緒ある神社で、受験の合格祈願に多くの参拝者が訪れます。梅の名所としても知られ、四季折々の風景が楽しめます。</p>
             </div>
+        </div>
             <div class="sightseeing-item-title">
-                <h1>文化</h1>
+                <h1>お祭り</h1>
             </div>
             <div class="sightseeing-item">
                 <h2>○山笠</h2>
@@ -54,5 +51,8 @@
                 <p>ゴールデンウィークに開催され、パレードもステージで、老若男女が一緒に盛り上がる、福岡の春の風物詩です。</p>
             </div>
     </div>
+    <div class="footer">
+            <small>&copy; 2501418 畑中愛実 2025</small>
+    </footer>
 </body>
 </html>
