--- a/28/hobby.html
+++ b/28/hobby.html
@@ -17,29 +17,39 @@
         </ul>
         </nav>
     </div>
-    <div id="maindiv3">
-        <header>
-        <div class="header-icons">
-            <h1>SNS</h1>
-            <img src="icon/search.png" alt="Search">
-            <img src="icon/profile.png" alt="Profile">
+    <div class="frame-item">
+        <div class="frame-header">
+            <img src="image/profile.png" alt="アイコンの画像">
+            <h1>aimi_hatanaka</h1>
         </div>
-        </header>
-        <div id="maindiv3">
-        <div class="gamen1">
-                <img src="image/Image.jpg" alt="インスタ風画面">
-                </div>
-        <div class="footer-icons2">
-                <img src="image/home.png" alt="Home">
-                <img src="image/profile.png" alt="profile">
-                <img src="image/favorite.png" alt="favorite">
+        <div class="homegamen">
+        <img src="image/Image.jpg" alt="趣味の画像">
         </div>
-        <div class="footer-icons">
-            <img src="image/home.png" alt="Home">
-            <img src="image/profile.png" alt="profile">
-            <img src="image/favorite.png" alt="favorite">
-            <img src="image/notification.png" alt="Notification">
+        <div class="homeicon">
+            <div class="homeicon1">
+                <img src="image/home.png" alt="アイコン1の画像">
+                <img src="image/favorite.png" alt="アイコン2の画像">
+            </div>
+            <div class="homeicon2">
+                <img src="image/search.png" alt="アイコン4の画像">
+            </div>
         </div>
-    </div> 
+        <div class="homecomment">
+            <h3>写真を撮ることが好きです！</h3>
+            <h3>iphoneで撮ってます！</h3>
+        </div>
+        <hr>
+        <div class="homeicon">
+        <div class="footericon">
+            <img src="image/profile.png" alt="アイコン1の画像">
+            <img src="image/favorite.png" alt="アイコン2の画像">
+            <img src="image/notification.png" alt="アイコン3の画像">
+            <img src="image/search.png" alt="アイコン4の画像">
+        </div>
+        </div>
+    </div>
+        <div class="footer">
+            <small>&copy; 2501418 畑中愛実 2025</small>
+        </footer>
 </body>
 </html>
