--- a/28/music.html
+++ b/28/music.html
@@ -43,5 +43,8 @@
         </div>
         <button id="backbotton"><a href="home.html">ホームに戻る</a></button>
     </div>
+    <div class="footer2">
+            <small>&copy; 2501418 畑中愛実 2025</small>
+    </footer>
 </body>
 </html>
